trying to figure out the bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div id= "center_container">
             <div id="header_text">Please select something</div>
-            <video controls width="400px" id="vid">
+            <video controls width="400px" id="vid" loop>
                 <source src="" type="video/mp4">
             </video>
             <div id= "nav_container">
