trying to make it a web app

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000000">
     <title>Video Player | Web</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -35,9 +36,12 @@
     </div>
     <script src="script.js"></script>
     <script>
-        if ( 'serviceWorker' in navigator ) {
-            navigator.serviceWorker.register('serviceWorker.js');
-        }
+        // if ( 'serviceWorker' in navigator ) {
+        //     var reg_prom = navigator.serviceWorker.register('serviceWorker.js');
+        //     reg_prom
+        //         .then(reg=>console.log("👍🏿👍🏿 Successfully reg..",reg))
+        //         .catch( e=>console.log("👎🏿👎🏿 Failed to reg..", e));
+        // }
     </script>
 </body>
 </html>
