--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div> -->
         <div id= "center_container">
             <div id="header_text">Please select something</div>
-            <video controls width="400px" id="vid" loop>
+            <video controls id="vid" loop>
                 <source src="" type="video/mp4">
             </video>
             <div id= "nav_container">
