--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <title>Video Player | Web</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="data:,">
+    <link rel="shortcut icon" href="icons/chrome/chrome-favicon-16-16.png" type="image/png">
 </head>
 <body>
     <div id="container">
-        <!-- <div id="left_container">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium laboriosam nobis eligendi impedit sequi totam iure enim nulla veritatis iusto. Cumque labore perferendis explicabo quam velit minima a odit. Dolores?
-        </div> -->
         <div id= "center_container">
             <div id="header_text">Please select something</div>
             <video controls id="vid" loop>
