Added light theme

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
         <div id= "center_container">
             <div id="header_text">Please select something</div>
-            <video controls id="vid" loop>
+            <video controls id="vid">
                 <source src="" type="video/mp4">
             </video>
             <div id= "nav_container">
@@ -26,6 +26,7 @@
                 <input class="hiddenInputTag" type="file" accept="video/mp4" multiple>
                 <!---------------------------------->
                 <button id="nav_right"> NEXT &#8658;</button>
+                <button id="theme">CHANGE THEME</button>
             </div>
         </div>
         <div id="right_container">
