--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div id="header_text">Please select something</div>
             <video controls id="vid">
                 <source src="" type="video/mp4">
+                <source src="" type="video/x-matroska">
             </video>
             <div id= "nav_container">
                 <button id ="nav_left">&#8656; PREV </button>
